# verificacao

./: README.md  app.py  cartoes.db  gitignore  pyproject.toml  selectdb.ipynb  verify_db.py
