[project]
name = "verifica-cartao"
version = "0.1.0"
description = ""
authors = [
    {name = "jhonyautogeral",email = "jhonatan.novais@outlook.com.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.47.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
